<resources>
    <string name="app_name">Будь добр!</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="error_input_name">Ошибка при вводе данных</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="lastname">Отчество</string>
    <string name="personal_number">Личный номер телефона</string>
    <string name="birthday">Дата рождения</string>
    <string name="city">Город проживания</string>
    <string name="loading">Загрузка</string>
    <string name="welcome">Добро пожаловать, %s!</string>
    <string name="whenNeedStartHelp">Желаемое время начала работы: %s</string>
    <string name="address">Адрес: %s</string>
    <string name="confirm">Подтвердить</string>
    <string name="dob">dob</string>
    <string name="gender">Пол</string>
    <string name="logout">Выйти</string>
    <string name="end_work">Завершить работу</string>
    <string name="delete">Удалить профиль</string>
    <string name="passport_confirmed">Паспорт подтвержден</string>
    <string name="passport_not_confirmed">Паспорт не подтвержден</string>
    <string name="email_confirmed">Почта подтверждена</string>
    <string name="email_not_confirmed">Почта не подтверждена</string>
    <string name="certl_confirmed">Сертификат подтвержден</string>
    <string name="cert_not_confirmed">Сертификат не подтвержден</string>
    <string name="confirm_document">Подтвердить / Изменить документы</string>
    <string name="complete_work">Загрузить фотографии</string>
    <string name="make_photo">Сделать фото</string>
    <string name="get_from_gallery">Загрузить из галереи</string>
    <string name="type_need_help">Необходимый вид помощи</string>
    <string name="volunteer_gender">Желаемый пол волонтера</string>
    <string name="volunteer_age">Желаемый возраст волонтера</string>
    <string name="approx_address">Примерный адрес</string>
    <string name="help_start_time">Необходимое время помощи</string>
    <string name="help_description">Описание помощи</string>
    <string name="choose_date_help">Выбрать время помощи</string>
    <string name="end_work_code">Код завершения работы</string>
</resources>